# encurtador-url

./: .env.example  Cargo.toml  README.md
src/: app.rs  main.rs  server.rs
src/controller/: auth.rs
src/database/: migrate.rs  mod.rs
src/middlewares/: mod.rs
src/modal/: mod.rs
src/router/: mod.rs  routes.rs
src/utils/: json.rs  mod.rs
